# claude_code_showcase

./: .gitignore  CLAUDE.md  README.md  claude-code-showcase.html  index.html  package-lock.json  package.json  tailwind.config.js  test.sh  vite.config.js
examples/openmanus-agent/: PRD.md  README.md  pyproject.toml
examples/openmanus-agent/2048/: index.html  script.js  style.css
examples/openmanus-agent/2048_2/: index.html  script.js  style.css
examples/openmanus-agent/codex/: index.html
examples/openmanus-agent/gemini/gemini-showcase/: index.html  package-lock.json  package.json
examples/openmanus-agent/new_agent/: README.md  game.py
examples/openmanus-agent/runs/20260125-225728/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-225918/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-225938/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-230028/: plan.json
examples/openmanus-agent/runs/20260125-230136/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-230232/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-230252/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-230324/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-230408/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-230447/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-232950/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/runs/20260125-233051/: plan.json  result.json  trace.jsonl
examples/openmanus-agent/scripts/: test_2048_manual.py  test_gui.py
examples/openmanus-agent/tests/: __init__.py
src/: App.jsx  (+1 more)
(+182 files in other folders)
